[package]
name = "disperse_data"
version = "0.1.0"
authors = ["Fernando Herrera <fernandoj.herrera@softtek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.18.1"
structopt = "0.2.15"
chrono = "0.4.0"
regex = "1"

[dependencies.postgres-types]
version = "0.1.3"
features=["with-chrono-0_4"]
